2014-08-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.0 release.
	* plugins/tumblr/: Disabled Tumblr plugin temporally.
	* plugins/folder.py: Fixed a bug (issue 111).
	* image/geocoding.py: Updated a GeoNmaes API paramater.
	* facebook/__init__.py: Updated photo URLs.
	* plugins/flickr/: Flickr API requirs SSL connections.
	* urlget.py: Fixed a twisted bug (issue 116).
	* clutterimage.py: Avoid an old clutter bug.

2013-10-02  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py (PhotoListStore.append): Fixed types of souce name.
	* image/clutterimage.py (PhotoImageClutter): Fixed Clutter Color
	  Settings for Clutter Stage.

2013-01-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* tumblr/__init__.py: Updated for new Tumblr API.

2012-12-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/shotwell.py: Added support for shotwell 0.13 data base.

2012-05-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences/plugin.py, preferences/treeview.py: Fixed minor bugs.
	* preferences/plugin.py: Fixed an old symbol.

2012-03-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* po/it.po, help/it/it.po: Updated Italian translation.
	  Thanks Cristian Marchi!
	* gphotoframe.schemas.in: Fixed typos.

2012-02-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.5.1 release.

2012-02-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotoframe: Renamed the product name from GNOME Photo Frame to
	  GPhotoFrame (issue #104).

2012-02-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.0-a1 release.
	* es.po: Added new translation.  Thanks jorjuardo!
	* com.googlecode.gphotoframe.schemas: Added new section 'geometry'.

2012-01-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.5 release.
	* facebook/__init__.py (FacebookPhotoList): Ignore some entries
	  which have not picture URIs.

2012-01-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.5-rc1 release.
	* actor/map.py: Avoid a problem of Champlain.NetworkTileSource.
